assets/css/style.css
.error {
  display:none;
}
body {
  background-image: url("https://images.pexels.com/photos/196652/pexels-photo-196652.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb");
  background-size: cover;
  min-height: 100vh;
}

nav {
  background-color: white;
  height: 60px;
  display: flex;
  flex-direction: row;
  align-items: center;
  box-shadow: 0px 5px 19px 0px rgba(0,0,0,0.6);
}

#nav_container {
  margin: 0 auto;
  width: 95%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

#nav_logo_name_area {
  width: 25%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

#nav_logo_name_area img {
  margin-right: 10px;
}

#nav_logo_name_area h2 {
  margin-bottom: 0;
  font-size: 30px;
  line-height: 1;
}

#app_link {
  color: #212529;
  text-decoration: none;
}

#app_link:hover {
  color: initial;
  text-decoration: none;
  cursor: pointer;
}

#nav_search_area {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.search-artists {
  width: 360px;
}

#search_form {
  width: 100%;
  display: flex;
}

#artist_search {
  width: 100%;
}

#search-input {
  border-radius: 0px;
}

.btn-secondary {
  background-color: white;
  border: 1px solid #ccc;
}

#submit {
  border-radius: 0px;
}

#submit:hover {
  background-color: initial;
  border: 1px solid #ccc;
  cursor: pointer;
}

#search_icon {
  color: #777;
}

#nav_links_area {
  width: 25%;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: flex-end;
}

#nav_links_area a {
  margin-right: 10%;
}

#left_side {
  padding: 0;
}

.row {
  margin-bottom: 15px;
}

#info {
  display: block;
  text-align: center;
  margin: 0 auto;
  margin-top: 40px;
  background-color: rgba(70, 74, 78, .8);
  padding: 60px 15px 60px 15px;
  -webkit-box-shadow: 3px 3px 14px -2px rgba(0,0,0,0.48);
  -moz-box-shadow: 3px 3px 14px -2px rgba(0,0,0,0.48);
  box-shadow: 3px 3px 14px -2px rgba(0,0,0,0.48);
}

#info h1, #info h3 {
  color: white;
}

#searchResult {
  display: none;
  background-color: rgba(70, 74, 78, .8);
  color: white;
  margin-top: 40px;
  padding: 30px;
  margin-bottom: 40px;
  -webkit-box-shadow: 3px 3px 14px -2px rgba(0,0,0,0.48);
  -moz-box-shadow: 3px 3px 14px -2px rgba(0,0,0,0.48);
  box-shadow: 3px 3px 14px -2px rgba(0,0,0,0.48);
}

#artist_image {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#artist_image img {
  width: 100%;
  margin-bottom: 15px;
  opacity: 1;
}

#artist_bio h3 {
  font-size: 2.25rem;
}

#artist_bio p {
  text-align: justify;
  font-size: 1.15rem;
  margin-bottom: 0;
}

#artist_bio p a {
  display: none;
}

#album_section {
  padding: 0px;
}

#artist_albums {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
}

#album_section h5 {
  text-align: left;
  padding: 0;
  margin: 0;
  line-height: 1;
  color: white;
}

.img-holder {
  width: 48%;
  margin-top: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.album-img {
  width: 100%;
  height: auto;
}

.album-title {
  text-align: center;
  margin-top: 5px;
  font-size: 12px;
}

#songs-list h6 {
  font-size: 12px;
  color: rgba(203, 226, 249, 1);
  font-weight: 300;
}

div#top-songs {
  background-color: rgba(19, 18, 15, 0.61);
}

div.social {
  color: white;
}

div i .fa {
  font-size: 24px;
  font-weight: 700px;
}

div.social span {
  font-family: "Arial", sans-serif;
  font-size: 10px;
  padding-left: 30px;
}

div.social {
  padding: 10px 20px;
  margin-bottom: 5px;
  background-color: rgba(52, 111, 169, 0.48);
}

div#top-songs {
  margin: 20px 0;
}

#songs-list a {
  font-size: 12px;
  color: rgba(203, 226, 249, 1);
  font-weight: 300;
}

#songs-list a:hover {
  text-decoration: none;
  cursor: pointer;
}

ul {
  margin-bottom: 0;
}

div #events, #awards, #top-songs {
  padding: 15px;
}

#awards {
  margin-bottom: 15px;
}

#eventItems {
  max-height: 200px;
  overflow-y: scroll;
}

.event {
  margin-bottom: 10px;
}

.event:last-child {
  margin-bottom: 0;
}

.event p {
  margin-bottom: 0;
}

.event-date {
  font-size: 1.13rem;
  margin-bottom: 5px;
}

.event-name, .event-address {
  font-weight: 300;
  font-size: 13px;
}

.ticket-link {
  color: white;
}

.ticket-link:hover {
  color: white;
  cursor: pointer;
}

#no_results {
  display: none;
  background-color: rgba(70, 74, 78, .8);
  color: white;
  margin-top: 40px;
  padding: 30px;
}

@media screen and (max-width: 1199px) {
  #artist_bio p {
    font-size: 1rem;
  }
}

@media screen and (max-width: 991px) {

  #main_row {
    margin-bottom: 0;
  }

  #artist_albums {
    justify-content: flex-start;
  }

  #artist_bio p {
    font-size: 1rem;
    margin-bottom: 20px;
  }

  .img-holder {
    width: 32%;
    margin-top: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .img-holder:nth-child(3n + 1), .img-holder:nth-child(3n + 2) {
    margin-right: 2%;
  }

  #awards {
    margin-bottom: 5px;
  }
}

@media screen and (max-width: 575px) {
  
  .container {
    width: 95%;
  }

  #app_link {
    display: none;
  }

  #nav_links_area a {
    margin-right: 10%;
  }

}

